--- a/index.html
+++ b/index.html
@@ -184,58 +184,45 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+            </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img id="imgArticleZero" src="" class="w-100" alt="News Article Image">
-                <div>
+                <img id="imgArticleZero" src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
                   <h5 id="txtArticleNameZero"></h5>
-                  <a id="articleLinkZero" href="">Read article</a>
+                  <a  id="articleLinkZero" class="btn btn-info btn-sm">Read article</a>
                 </div>
               </div>
-
               <div class="carousel-item">
-                <img id="imgArticleOne" src="" class="w-100" alt="News Article Image">
-                <div>
+                <img id="imgArticleOne" src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
                   <h5 id="txtArticleNameOne"></h5>
-                  <a id="articleLinkOne" href="">Read article  </a>
+                  <a id="articleLinkOne" class="btn btn-info btn-sm" >Read article</a>
                 </div>
               </div>
-
               <div class="carousel-item">
-                <img id="imgArticleTwo" src="" class="w-100" alt="News Article Image">
-                <div>
+                <img id="imgArticleTwo" src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
                   <h5 id="txtArticleNameTwo"></h5>
-                  <a id="articleLinkTwo" href="">Read article</a>
+                  <a id="articleLinkTwo" class="btn btn-info btn-sm" >Read article</a>
                 </div>
               </div>
-
-              <div class="carousel-item">
-                <img id="imgArticleThree" src="" class="w-100" alt="News Article Image">
-                <div>
-                  <h5 id="txtArticleNameThree"></h5>
-                  <a id="articleLinkThree" href="">Read article</a>
-                </div>
-              </div>
-
-              <div class="carousel-item">
-                <img id="imgArticleFour" src="" class="w-100" alt="News Article Image">
-                <div>
-                  <h5 id="txtArticleNameFour"></h5>
-                  <a id="articleLinkFour" href="">Read article</a>
-                </div>
-              </div>
-
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </a>
           </div>
+          
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
