--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
 
             <div class="carousel-inner">
               <div id="imgArticleZeroContainer" class="carousel-item active" >
-                
                 <div class="container">
                   <div class="carousel-caption text-start">
                     <h5 id="txtArticleNameZero"></h5>
@@ -207,7 +206,7 @@
 
               <div id="imgArticleOneContainer" class="carousel-item">
                 <div class="container">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption text-start">
                     <h5 id="txtArticleNameOne"></h5>
                     <p><a id="articleLinkOne" id="articleLinkZero" class="btn btn-lg btn-primary" href="" role="button">Read Article</a></p>
                   </div>
@@ -216,7 +215,7 @@
 
               <div id="imgArticleTwoContainer" class="carousel-item">
                 <div class="container">
-                  <div class="carousel-caption text-end">
+                  <div class="carousel-caption text-start">
                     <h5 id="txtArticleNameTwo"></h5>
                     <p><a id="articleLinkTwo" class="btn btn-lg btn-primary" href="" role="button">Read Article</a></p>
                   </div>
@@ -225,7 +224,7 @@
 
               <div id="imgArticleThreeContainer" class="carousel-item">
                 <div class="container">
-                  <div class="carousel-caption">
+                  <div class="carousel-caption text-start">
                     <h5 id="txtArticleNameThree"></h5>
                     <p><a id="articleLinkThree" id="articleLinkZero" class="btn btn-lg btn-primary" href="" role="button">Read Article</a></p>
                   </div>
@@ -234,7 +233,7 @@
 
               <div id="imgArticleFourContainer" class="carousel-item">
                 <div class="container">
-                  <div class="carousel-caption text-end">
+                  <div class="carousel-caption text-start">
                     <h5 id="txtArticleNameFour"></h5>
                     <p><a id="articleLinkFour" class="btn btn-lg btn-primary" href="" role="button">Read Article</a></p>
                   </div>
