--- a/index.html
+++ b/index.html
@@ -259,6 +259,24 @@
       </div>
     </div>
   </div>
+  
+  <!-- unesco modal -->
+  <div class="modal fade" id="unescoModal" tabindex="-1" aria-labelledby="unescoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="unescoModalLabel"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h3>This country does not contain UNESCO (cultural) World Heritage Sites</h3>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div id="overlay"></div>
   
