--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/06e19d7111.js" crossorigin="anonymous"></script>
   <script src="assets/js/leafletApp.js"></script>
 </body>
 
