added thumbnail to unesco popup

--- a/index.html
+++ b/index.html
@@ -51,20 +51,50 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="wikiModalLabel">Country Introduction</h5>
+          <h5 class="modal-title" id="wikiModalLabel"></h5>
         </div>
         <div class="modal-body">
-          <div id="txtWikiImg"></div>
-          <div>Population 5 million</div>
-          <div>Area 567,000 sqKm</div>
-          <div> Country 2 and 3 Character codes: GB, GBR</div>
-          <div>Captial: London</div>
-          <div>Current time in London: 14:52</div>
-          <div>Country calling code: +44</div>
-          <div>Language(s): English
-          <div>Demonym: </div>
-          <div>Top Level Internet Domail: .uk</div>
-          </div>
+          <table class="table">
+            <div id="txtWikiImg"></div>
+            <tbody>
+              <tr>
+                <th scope="row">Population:</th>
+                <td id="txtPopulation"></td>
+              </tr>
+              <tr>
+                <th scope="row">Capital:</th>
+                <td id="txtCapital"></td>
+              </tr>
+              <tr>
+                <th scope="row">Language(s):</th>
+                <td id="txtLanguages"></td>
+              </tr>
+              <tr>
+                <th scope="row">Demonym:</th>
+                <td id="txtDemonym"></td>
+              </tr>
+              <tr>
+                <th scope="row">Area:</th>
+                <td id="txtArea"></td>
+              </tr>
+              <tr>
+                <th scope="row">ISO2 Country Code:</th>
+                <td id="txtIso2"></td>
+              </tr>
+              <tr>
+                <th scope="row">ISO3 Country Code:</th>
+                <td id="txtIso3"></td>
+              </tr>
+              <tr>
+                <th scope="row">Calling Code:</th>
+                <td id="txtCallingCode"></td>
+              </tr>
+              <tr>
+                <th scope="row">Country Domain:</th>
+                <td id="txtDomain"></td>
+              </tr>
+            </tbody>
+          </table>
           <div id="txtWiki"></div>
         </div>
         <div class="modal-footer">
