added local loading.gif

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div id="loading">
       <div id="loading-img">
-        <p><img src="http://i.stack.imgur.com/FhHRx.gif"/> Loading...</p>
+        <p><img src="assets\img\loading.gif"/> Loading...</p>
       </div>
   </div>
 
