addded aditional covid data

--- a/index.html
+++ b/index.html
@@ -116,16 +116,28 @@
           <table class="table">
             <tbody>
               <tr>
-                <th scope="row">Deaths:</th>
-                <td id="txtCovidDeaths"></td>
-              </tr>
-              <tr>
                 <th scope="row">Cases:</th>
                 <td id="txtCovidCases"></td>
               </tr>
               <tr>
                 <th scope="row">Recovered:</th>
                 <td id="txtCovidRecovered"></td>
+              </tr>
+              <tr>
+                <th scope="row">Deaths:</th>
+                <td id="txtCovidDeaths"></td>
+              </tr>
+              <tr>
+                <th scope="row">Cases Per Million:</th>
+                <td id="txtCovidPerMillion"></td>
+              </tr>
+              <tr>
+                <th scope="row">Death Rate:</th>
+                <td id="txtCovidDeathRate"></td>
+              </tr>
+              <tr>
+                <th scope="row">Recovery Rate:</th>
+                <td id="txtCovidRecoveryRate"></td>
               </tr>
             </tbody>
           </table>
