changed color scheme to mostly default

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="weatherModalLabel"></h5>
+          <h1 class="modal-title txtCapitalWeatherName" id="weatherModalLabel" ></h1>
         </div>
         <div class="modal-body short-modal">
           <h1 id="txtCapitalWeatherName"></h1>
@@ -198,10 +198,10 @@
             </tbody>
           </table>
         </div>
-      </div>
-      <div class="modal-footer">
+          <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
+      </div>
     </div>
   </div>
 
@@ -238,7 +238,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
+      </div>
       </div>
     </div>
   </div>
