using local files instead of CDNs

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gazetteer</title>
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" href="https://cdn.maptiler.com/mapbox-gl-js/v1.5.1/mapbox-gl.css" />
+
+  <link rel="stylesheet" href="assets/vendors/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/vendors/Leaflet.EasyButton-master/src/easy-button.css">
+  <link rel="stylesheet" href="assets/vendors/leaflet/leaflet.css">
   <link rel="stylesheet" href="assets/vendors/Leaflet.markercluster-1.4.1/dist/MarkerCluster.css">
   <link rel="stylesheet" href="assets/vendors/Leaflet.markercluster-1.4.1/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css'  />
+  <link rel="stylesheet" href="https://cdn.maptiler.com/mapbox-gl-js/v1.5.1/mapbox-gl.css" />
   <link rel="stylesheet" href="assets/css/leafletMainStyle.css">
+
 </head>
 
 <body>
@@ -347,19 +345,15 @@
   <div id="overlay"></div>
   
   <script src="assets/vendors/jquery-3.5.1.min.js"></script>
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
-  
-  <script src="https://cdn.maptiler.com/mapbox-gl-leaflet/latest/leaflet-mapbox-gl.js"></script>
+  <script src="assets/vendors/bootstrap-5.0.0-beta1-dist/js/bootstrap.min.js"></script>
+  <script src="assets/vendors/leaflet/leaflet.js"></script>
+  <script src="assets/vendors/Leaflet.EasyButton-master/src/easy-button.js"></script>
   <script src="assets/vendors/Leaflet.markercluster-1.4.1/dist/leaflet.markercluster.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
+  <script src="https://cdn.maptiler.com/mapbox-gl-leaflet/latest/leaflet-mapbox-gl.js"></script>
   <script src="https://kit.fontawesome.com/06e19d7111.js" crossorigin="anonymous"></script>
   <script src="assets/js/leafletApp.js"></script>
+  
 </body>
 
 </html>
